--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 		"axios": "^1.11.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
+		"date-fns-tz": "^3.2.0",
 		"lucide-react": "^0.542.0",
 		"next": "15.5.2",
 		"react": "19.1.0",
